@@ -22,6 +22,8 @@ nn-nn-15 - Version 5.1.36
 
   - Fix for Bug#72077 (18425861), Fabric connection with username to a server with disabled auth throws NPE
 
+  - Add test for already fixed Bug#72546 (18719760), C/J Fabric createGroup() throws ClassCastException
+
 03-23-15 - Version 5.1.35
 
   - Fix for Bug#19536760, GETSTRING() CALL AFTER RS.RELATIVE() RETURNS NULLPOINTEREXCEPTION
